--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1035,6 +1035,7 @@ select.input-error {
   width: 100%;
   height: 100vh;
   position: relative;
+  background-color: #0C0C0C;
 }
 
 .bg-img{
@@ -1055,6 +1056,17 @@ select.input-error {
   width: 100%;
   object-fit: cover;
   transition: all 1s;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.appear{
+  opacity: 1;
+}
+
+.dis{
+  opacity: 0;
 }
 
 .app__menu-cate h1{
